@@ -817,7 +817,22 @@ unsigned char char_set_spectrum[]={		0
 
 
 //CYRILLIC SMALL LETTER I и
-,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00
+,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00,
+
+//Cyrillic Ш - 131
+0x00,0x54,0x54,0x54,0x54,0x54,0x7C,0x00,
+
+//Cyrillic л - 132
+0x00,0x00,0x1E,0x22,0x22,0x22,0x42,0x00,
+
+//Cyrillic г - 133
+0x00,0x00,0x3C,0x20,0x20,0x20,0x20,0x00,
+
+//Cyrillic ч - 134
+0x00,0x00,0x44,0x44,0x44,0x3C,0x04,0x04,
+
+//Cyrillic д - 135
+0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
 
 
 
@@ -891,7 +906,23 @@ unsigned char char_set_cpc[]={
 ,0xfe ,0x00 ,0xdc ,0x66 ,0x66 ,0x66 ,0x66 ,0x00
 
 //CYRILLIC SMALL LETTER I и
-,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00
+,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00,
+
+//Cyrillic Ш - 131
+0x00,0x54,0x54,0x54,0x54,0x54,0x7C,0x00,
+
+//Cyrillic л - 132
+0x00,0x00,0x1E,0x22,0x22,0x22,0x42,0x00,
+
+//Cyrillic г - 133
+0x00,0x00,0x3C,0x20,0x20,0x20,0x20,0x00,
+
+//Cyrillic ч - 134
+0x00,0x00,0x44,0x44,0x44,0x3C,0x04,0x04,
+
+//Cyrillic д - 135
+0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
+
 
 };
 unsigned char *char_set=char_set_spectrum; //por defecto
@@ -969,7 +1000,22 @@ unsigned char char_set_z88[]={
 
 
 //CYRILLIC SMALL LETTER I и
-,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00
+,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00,
+
+//Cyrillic Ш - 131
+0x00,0x54,0x54,0x54,0x54,0x54,0x7C,0x00,
+
+//Cyrillic л - 132
+0x00,0x00,0x1E,0x22,0x22,0x22,0x42,0x00,
+
+//Cyrillic г - 133
+0x00,0x00,0x3C,0x20,0x20,0x20,0x20,0x00,
+
+//Cyrillic ч - 134
+0x00,0x00,0x44,0x44,0x44,0x3C,0x04,0x04,
+
+//Cyrillic д - 135
+0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
 
 
 };
@@ -1053,7 +1099,23 @@ unsigned char char_set_sam[]={
 
 
 //CYRILLIC SMALL LETTER I и
-,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00
+,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00,
+
+//Cyrillic Ш - 131
+0x00,0x54,0x54,0x54,0x54,0x54,0x7C,0x00,
+
+//Cyrillic л - 132
+0x00,0x00,0x1E,0x22,0x22,0x22,0x42,0x00,
+
+//Cyrillic г - 133
+0x00,0x00,0x3C,0x20,0x20,0x20,0x20,0x00,
+
+//Cyrillic ч - 134
+0x00,0x00,0x44,0x44,0x44,0x3C,0x04,0x04,
+
+//Cyrillic д - 135
+0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
+
 
 
 };
@@ -1147,7 +1209,22 @@ unsigned char char_set_mansoftware[]={
 
 
 //CYRILLIC SMALL LETTER I и
-,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00
+,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00,
+
+//Cyrillic Ш - 131
+0x00,0x54,0x54,0x54,0x54,0x54,0x7C,0x00,
+
+//Cyrillic л - 132
+0x00,0x00,0x1E,0x22,0x22,0x22,0x42,0x00,
+
+//Cyrillic г - 133
+0x00,0x00,0x3C,0x20,0x20,0x20,0x20,0x00,
+
+//Cyrillic ч - 134
+0x00,0x00,0x44,0x44,0x44,0x3C,0x04,0x04,
+
+//Cyrillic д - 135
+0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
 
 };
 
@@ -1227,7 +1304,23 @@ unsigned char char_set_ql[]={
         ,0x00
 
 
-//CYRILLIC SMALL LETTER I и
-,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00
+//CYRILLIC SMALL LETTER I и  - 130
+,0x00 ,0x42  ,0x46 ,0x4a ,0x52 ,0x62 ,0x42 ,0x00,
+
+
+//Cyrillic Ш - 131
+0x00,0x54,0x54,0x54,0x54,0x54,0x7C,0x00,
+
+//Cyrillic л - 132
+0x00,0x00,0x1E,0x22,0x22,0x22,0x42,0x00,
+
+//Cyrillic г - 133
+0x00,0x00,0x3C,0x20,0x20,0x20,0x20,0x00,
+
+//Cyrillic ч - 134
+0x00,0x00,0x44,0x44,0x44,0x3C,0x04,0x04,
+
+//Cyrillic д - 135
+0x00,0x1C,0x24,0x24,0x44,0x7E,0x42,0x42,
 
 };
