@@ -31,7 +31,7 @@ extern unsigned char char_set_sam[];
 extern unsigned char char_set_mansoftware[];
 extern unsigned char char_set_ql[];
 
-#define MAX_CHARSET_GRAPHIC 130
+#define MAX_CHARSET_GRAPHIC 135
 
 
 #endif
