@@ -11,6 +11,7 @@ Version 7.3. 15 April 2019 - xxx edition
 -Added hdf to ide/mmc raw converter
 -Added hdf support to MMC emulation
 -Allow text adventure keyboard also on CPC
+-Added support for more cyrillic characters on menu
 
 -Fixed bug having more than 256 text to adventure keyboard words
 -Fixed bug on CPC vertical scrolling
